2003-07-23  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03939] next/prev visited link
	* funcname.tab (NEXT_VISITED): added
		(PREV_VISITED): added
	* main.c (_nextA): added
		(_prevA): added
		(nextVA): added
		(prevVA): added
	* proto.h (nextVA): added
		(prevVA): added
	* doc/README.func (NEXT_VISITED): added
		(PREV_VISITED): added
	* doc-jp/README.func (NEXT_VISITED): added
		(PREV_VISITED): added
	* NEWS: func: NEXT_VISITED, PREV_VISITED
	

2003-07-14  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03938] clear region margin
	* w3mimgdisplay.c (clearMargin): added
		(GetOption): add -margin
		(ClearImage): clear margin
	* w3mi,g/w3mimg.h (w3mimg_op): clear_margin
	* w3mimg/fb/fb.c (fb_clear): x,y must be >= 0
	* w3mimg/x11/x11_w3mimg.c (x11_clear): x,y must be >= 0

2003-07-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03937] <center> in <table>
	* table.c (feed_table_tag): fix <center>,</center>,<div>,</div>,
				<p>,<br>,<nobr>,</nobr>,<wbr>
			check_rowcol() for <img>

2003-07-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimg/fb/fb_img.h (get_image_size): add missing prototypes
	* w3mimg/fb/fb.c (fb_clear): unused variable `j'

2003-07-09  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03935] Re: clear image
	* w3mimg/fb/fb.c (fb_get_packed_color): added
		(fb_image_pset): use fb_get_packed_color
		(fb_image_fill): use fb_get_packed_color
		(fb_clear): use tmp to store pixels

2003-07-09  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03934] Re: clear image
	* w3mimg/x11/x11_w3mimg.c (x11_clear): s/FALSE/False/

2003-07-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03931] Re: clear image
	* w3mimgdisplay.c (ClearImage): offset
	* w3mimg/fb/fb.c (fb_clear): memcpy by pixel_size

2003-07-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03929] clear image
	* image.c (syncImage): added
		(drawImage): rewrite using syncImage()
		(clearImage): use clear image command (6)
	* w3mimgdisplay.c: change protocol